test-cases/negative/test_012_function_without_body.lay
# negative test: function declaration without body
# expected: error should be thrown

define function my_function that takes x and returns Number


